<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.chua</groupId>
        <artifactId>spring-support-parent-starter</artifactId>
        <version>4.0.0.32</version>
    </parent>

    <artifactId>spring-support-report-client-starter</artifactId>
    <description>上报信息客户端模块</description>
    <version>4.0.0.32</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <hutool.version>5.8.34</hutool.version>
        <docker-java-version>3.4.0</docker-java-version>
        <jna-version>5.14.0</jna-version>

    </properties>


    <dependencies>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>${hutool.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
            <version>1.4.0</version>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-oauth-client-starter</artifactId>
        </dependency>


        <dependency>
            <groupId>cn.keepbx.jpom</groupId>
            <artifactId>jpom-core-common</artifactId>
            <version>1.0.9</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba.fastjson2</groupId>
            <artifactId>fastjson2</artifactId>
            <version>2.0.54</version>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-common-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>utils-support-oshi-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>utils-support-groovy-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-swagger-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>utils-support-vertx-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-discovery-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.27.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>